--- a/eminent-escape/src/components/PortfolioCard.astro
+++ b/eminent-escape/src/components/PortfolioCard.astro
@@ -1,20 +1,46 @@
 ---
+interface Technology {
+    imageSrc: string;
+    imageAlt: string;
+    name: string;
+}
 interface ProjectsProps {
+    title: string;
     information: string;
     imageSrc: string;
     imageAlt: string;
+    technologies: Technology[];
 }
-const { information, imageSrc, imageAlt } = Astro.props as ProjectsProps;
+const { title, information, imageSrc, imageAlt, technologies } = Astro.props as ProjectsProps;
 ---
-<figure class="relative w-full h-full border-4 border-primary rounded-lg shadow-xl
-overflow-hidden cursor-pointer before:absolute before:top-0
-before:left-0 before:right-0 before:bottom-0 before:bg-primary before:text-white
-before:transform before:translate-x-full before:transition-transform before:duration-400
-hover:before:translate-x-0">
-    <img src={ imageSrc } alt={ imageAlt } />
-    <span
-    class="absolute inset-0 flex items-center justify-center bg-primary text-white
-    opacity-0 transition-opacity duration-400 hover:opacity-100" >
-        { information }
-    </span>
-</figure>
+<div>
+    <div>
+        <h3 class="text-center text-primary font-bold">{ title }</h2>
+    </div>
+    <div>
+        <figure class="relative w-full h-full border-4 border-primary rounded-lg shadow-xl
+        overflow-hidden cursor-pointer before:absolute before:top-0
+        before:left-0 before:right-0 before:bottom-0 before:bg-primary before:text-white
+        before:transform before:translate-x-full before:transition-transform before:duration-400
+        hover:before:translate-x-0">
+            <img src={ imageSrc } alt={ imageAlt } />
+            <span
+            class="absolute inset-0 flex items-center justify-center bg-primary text-white
+            opacity-0 transition-opacity duration-400 hover:opacity-100" >
+                { information }
+            </span>
+        </figure>
+    </div>
+    <div class="flex flex-row justify-between items-center">
+        {
+            technologies.map( (technology: Technology) => {
+                return (
+                    <div class="flex flex-col items-center">
+                        <img class="w-6 h-6" src={ technology.imageSrc } alt={ technology.imageAlt } />
+                        <span class="text-center text-xs">{ technology.name }</span>
+                    </div>
+                );
+            } )
+        }
+    </div>
+</div>
