--- a/eminent-escape/src/pages/portafolio/index.astro
+++ b/eminent-escape/src/pages/portafolio/index.astro
@@ -2,61 +2,148 @@
 import Layout from '../../layouts/Layout.astro';
 import ProyectoCard from '../../components/PortfolioCard.astro';
 
+interface Technology {
+    imageSrc: string;
+    imageAlt: string;
+    name: string;
+}
 interface ProjectsProps {
+    title: string;
     information: string;
     imageSrc: string;
     imageAlt: string;
+    technologies: Technology[];
 }
 const projects: ProjectsProps[] = [
     {
+        title: 'Proyecto 1',
         information: 'Proyecto 1',
         imageSrc: 'assets/proyecto1.jpg',
-        imageAlt: 'Imagen del Proyecto 1'
+        imageAlt: 'Imagen del Proyecto 1',
+        technologies: [
+            {
+                imageSrc: 'assets/javascript.svg',
+                imageAlt: 'JavaScript',
+                name: 'JavaScript'
+            },
+            {
+                imageSrc: 'assets/javascript.svg',
+                imageAlt: 'JavaScript',
+                name: 'JavaScript'
+            },
+            {
+                imageSrc: 'assets/javascript.svg',
+                imageAlt: 'JavaScript',
+                name: 'JavaScript'
+            }
+        ]
     },
     {
+        title: 'Proyecto 1',
         information: 'Proyecto 2',
         imageSrc: 'assets/proyecto2.jpg',
-        imageAlt: 'Imagen del Proyecto 2'
+        imageAlt: 'Imagen del Proyecto 2',
+        technologies: [
+            {
+                imageSrc: 'assets/javascript.svg',
+                imageAlt: 'JavaScript',
+                name: 'JavaScript'
+            }
+        ]
     },
     {
+        title: 'Proyecto 1',
         information: 'Proyecto 3',
         imageSrc: 'assets/proyecto3.jpg',
-        imageAlt: 'Imagen del Proyecto 3'
+        imageAlt: 'Imagen del Proyecto 3',
+        technologies: [
+            {
+                imageSrc: 'assets/javascript.svg',
+                imageAlt: 'JavaScript',
+                name: 'JavaScript'
+            }
+        ]
     },
     {
+        title: 'Proyecto 1',
         information: 'Proyecto 4',
         imageSrc: 'assets/proyecto4.jpg',
-        imageAlt: 'Imagen del Proyecto 4'
+        imageAlt: 'Imagen del Proyecto 4',
+        technologies: [
+            {
+                imageSrc: 'assets/javascript.svg',
+                imageAlt: 'JavaScript',
+                name: 'JavaScript'
+            }
+        ]
     },
     {
+        title: 'Proyecto 1',
         information: 'Proyecto 5',
         imageSrc: 'assets/proyecto5.jpg',
-        imageAlt: 'Imagen del Proyecto 5'
+        imageAlt: 'Imagen del Proyecto 5',
+        technologies: [
+            {
+                imageSrc: 'assets/javascript.svg',
+                imageAlt: 'JavaScript',
+                name: 'JavaScript'
+            }
+        ]
     },
     {
+        title: 'Proyecto 1',
         information: 'Proyecto 6',
         imageSrc: 'assets/proyecto6.jpg',
-        imageAlt: 'Imagen del Proyecto 6'
+        imageAlt: 'Imagen del Proyecto 6',
+        technologies: [
+            {
+                imageSrc: 'assets/javascript.svg',
+                imageAlt: 'JavaScript',
+                name: 'JavaScript'
+            }
+        ]
     },
     {
+        title: 'Proyecto 1',
         information: 'Proyecto 7',
         imageSrc: 'assets/proyecto7.jpg',
-        imageAlt: 'Imagen del Proyecto 7'
+        imageAlt: 'Imagen del Proyecto 7',
+        technologies: [
+            {
+                imageSrc: 'assets/javascript.svg',
+                imageAlt: 'JavaScript',
+                name: 'JavaScript'
+            }
+        ]
     },
     {
+        title: 'Proyecto 1',
         information: 'Proyecto 8',
         imageSrc: 'assets/proyecto8.jpg',
-        imageAlt: 'Imagen del Proyecto 8'
+        imageAlt: 'Imagen del Proyecto 8',
+        technologies: [
+            {
+                imageSrc: 'assets/javascript.svg',
+                imageAlt: 'JavaScript',
+                name: 'JavaScript'
+            }
+        ]
     }
 ];
 ---
 <Layout>
-    <h2 class="mt-20 mb-2 text-center text-primary font-semibold text-2xl lg:text-6xl md:text-4xl">Mi portafolio</h2>
-    <section class="grid grid-cols-4 grid-rows-2 gap-4">
+    <h2 class="mt-20 text-center text-primary font-semibold text-2xl lg:text-6xl md:text-4xl">Mi portafolio</h2>
+    <section class="grid grid-cols-4 grid-rows-2 gap-4 mt-7 mb-7">
         {
             projects.map(
                 (project) => (
-                    <ProyectoCard information={project.information} imageSrc={project.imageSrc} imageAlt={project.imageAlt} />
+                    <ProyectoCard
+                        title={ project.title }
+                        information={ project.information }
+                        imageSrc={ project.imageSrc }
+                        imageAlt={ project.imageAlt }
+                        technologies={ project.technologies }
+                    />
                 )
             )
         }
