Solo faltan revisar detalles como optimizar imagenes etc.

--- a/eminent-escape/src/components/Footer.astro
+++ b/eminent-escape/src/components/Footer.astro
@@ -21,10 +21,17 @@
         <div >
             <h3 class="font-bold text-secondary text-xs">Redes sociales</h3>
             <div class="flex flex-wrap items-center gap-4 w-full">
-                <a href="https://www.linkedin.com/in/luis-marquez-168080177/" target="_blank"><img class="w-8 h-8 object-contain" src="assets/linkedin.svg" alt="LinkedIn"/></a>
-                <a href="https://github.com/AlgorithmHappy" target="_blank"><img class="w-8 h-8 object-contain" src="assets/github.svg" alt="GitHub"/></a>
-                <a href="https://www.facebook.com/luisgerardo.marquezmendez/" target="_blank"><img class="w-8 h-8 object-contain" src="assets/facebook.svg" alt="FaceBook"/></a>
+                <a href="https://www.linkedin.com/in/luis-marquez-168080177/" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/linkedin.svg" alt="LinkedIn"/></a>
+                <a href="https://github.com/AlgorithmHappy" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/github.svg" alt="GitHub"/></a>
+                <a href="https://www.facebook.com/luisgerardo.marquezmendez/" target="_blank"><img class="w-8 h-8 object-contain" src="/assets/facebook.svg" alt="FaceBook"/></a>
             </div>
         </div>
     </div>
 </footer>
+
+<style>
+ul li::marker {
+    color: var(--color-secundary);
+    font-weight: bold;
+}
+</style>
