--- a/eminent-escape/src/styles/global.css
+++ b/eminent-escape/src/styles/global.css
@@ -6,3 +6,53 @@
   --color-primary: #40E0D0;
   --color-secondary: #2E2E2E;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Poppins', sans-serif;
+  color: var(--color-primary);
+}
+
+h1 {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-align: center;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+h3 {
+  font-size: 1.1rem;
+  font-weight: 600;
+}
+
+ul, ol {
+  margin-left: 1.5rem;
+}
+
+ul li::marker,
+ol li::marker {
+  color: var(--color-primary);
+  font-weight: bold;
+}
+
+ol {
+  list-style-type: decimal;
+}
+
+ul {
+  list-style-type: disc;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.6;
+  color: var(--color-secondary);
+}
+
+.ulfooter1 {
+  color: var(--color-secondary);
+}
