Se acabo la pagina

--- a/eminent-escape/src/components/Footer.astro
+++ b/eminent-escape/src/components/Footer.astro
@@ -15,7 +15,7 @@
         <div >
             <h3 class="font-bold text-secondary text-xs">Legal</h3>
             <ul class="list-disc ml-6">
-                <li><a href="" class="text-xs text-secondary hover:text-white hover:underline">Política de privacidad</a></li>
+                <li><a href="../privacidad/politicas" class="text-xs text-secondary hover:text-white hover:underline">Política de privacidad</a></li>
             </ul>
         </div>
         <div >
