--- a/eminent-escape/src/pages/contacto/index.astro
+++ b/eminent-escape/src/pages/contacto/index.astro
@@ -12,5 +12,6 @@ const contentSendButton = {
     <h2 class="mt-20 mb-2 text-center text-primary font-semibold text-2xl lg:text-6xl md:text-4xl">Contactame</h2>
     <div class="px-4">
         <TextInput content={ contentSendButton }/>
-    </div>    
+        <p>*Al enviar este formulario, aceptas nuestra <a class="text-primary decor" href="../privacidad/politicas" target="_blank">Política de Privacidad.</a></p>
+    </div>
 </Layout>
