--- a/eminent-escape/src/pages/portafolio/index.astro
+++ b/eminent-escape/src/pages/portafolio/index.astro
@@ -21,7 +21,7 @@ const projects: ProjectsProps[] = [
     {
         title: 'Desafío Técnico Full Stack',
         information: 'Prueba técnica en la que se desarrolló una API REST con Spring Data y MySQL para consultar cobros segmentados por oficina, agente y ejecutivo, incluyendo cálculos de porcentajes. El frontend se implementó con Vue y Vuetify para visualizar la información de forma clara e interactiva utilizando estados.',
-        imageSrc: 'assets/cobranza.png',
+        imageSrc: 'assets/cobranza.webp',
         link: 'https://github.com/AlgorithmHappy/gestion_de_cobranza',
         imageAlt: 'Imagen del Proyecto del Desafío Técnico Full Stack',
         technologies: [
@@ -51,7 +51,7 @@ const projects: ProjectsProps[] = [
         title: 'Landing Page para Generación de Leads',
         information: 'Landing page creada a partir de una plantilla personalizada con HTML, CSS y JavaScript. Está conectada a una API REST desarrollada con Spring Boot, que almacena los correos electrónicos en una base de datos MongoDB.',
         link: 'https://www.filasparabarberias.online',
-        imageSrc: 'assets/landingpage.png',
+        imageSrc: 'assets/landingpage.webp',
         imageAlt: 'Imagen del Proyecto Landing Page para Generación de Leads',
         technologies: [
             {
@@ -80,7 +80,7 @@ const projects: ProjectsProps[] = [
         title: 'Brincolín – Videojuego para Android y PC',
         information: 'Videojuego de plataformas inspirado en Doodle Jump. Creado con Godot Engine y programado en GDScript. Utiliza gráficos de Kenney y el objetivo es llegar lo más alto posible saltando entre plataformas. Este proyecto me ayudó a mejorar mi lógica de programación al enfrentarme a los desafíos de crear las mecánicas del juego.',
         link: 'https://balero.itch.io/brincolin',
-        imageSrc: 'assets/brincolin.png',
+        imageSrc: 'assets/brincolin.webp',
         imageAlt: 'Brincolin un videojuego realizado con Godot Engine',
         technologies: [
             {
@@ -94,7 +94,7 @@ const projects: ProjectsProps[] = [
         title: 'Asteroides – Videojuego para PC',
         information: 'Videojuego de asteroides para computadora Juego desarrollado en C++ con el framework multimedia SFML, en el que el objetivo es esquivar asteroides. También integré una base de datos SQLite para manejar datos del juego. Este proyecto me permitió mejorar tanto mi lógica de programación como mis habilidades en C++ y SQL.',
         link: 'https://balero.itch.io/asteroides',
-        imageSrc: 'assets/asteroides.png',
+        imageSrc: 'assets/asteroides.webp',
         imageAlt: 'Imagen del videojuego de asteroides',
         technologies: [
             {
@@ -118,7 +118,7 @@ const projects: ProjectsProps[] = [
         title: 'Geek - Videojuego para PC',
         information: 'Juego desarrollado en C++ con SFML. En este proyecto controlas a un cuervo que debe regular su aleteo para evitar morir. Fue una excelente oportunidad para mejorar mi lógica de programación mientras trabajaba con el framework multimedia SFML y el lenguaje C++.',
         link: 'https://balero.itch.io/geek',
-        imageSrc: 'assets/geek.png',
+        imageSrc: 'assets/geek.webp',
         imageAlt: 'Imagen del videojuego Geek',
         technologies: [
             {
@@ -136,7 +136,7 @@ const projects: ProjectsProps[] = [
     {
         title: 'Calculadora de Estadistica descriptiva',
         information: 'Proyecto escolar donde desarrollé una calculadora para obtener la media, mediana, varianza y desviación estándar a partir de datos ingresados. Usé C++ y GLUI para la interfaz gráfica. Este proyecto me ayudó a aplicar las matemáticas en la programación.',
-        imageSrc: 'assets/calculadoraestadistica.png',
+        imageSrc: 'assets/calculadoraestadistica.webp',
         imageAlt: 'Imagen de la calculadora de estadística descriptiva',
         link: 'https://github.com/AlgorithmHappy/MedidasDispersion',
         technologies: [
