--- a/eminent-escape/src/layouts/Layout.astro
+++ b/eminent-escape/src/layouts/Layout.astro
@@ -2,6 +2,8 @@
 import "../styles/global.css";
 import Menu from "../components/Menu.astro";
 import Footer from "../components/Footer.astro";
+import { inject } from '@vercel/analytics';
+inject();
 ---
 
 <!doctype html>
